<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="3dp">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:gravity="center"
            android:paddingBottom="10dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/like"
                android:padding="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black_color"
                android:textSize="15sp"
                android:minLines="2"
                android:maxLines="2"
                android:padding="5dp"
                android:text="@string/if_you_enjoyed_no_draw_please_support_us_by_giving_us_a_review"/>


            <Button
                android:id="@+id/btnRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:layout_marginTop="8dp"
                android:textColor="@color/white_color"
                android:background="@drawable/roundbtn"
                />

            <TextView
                android:id="@+id/tvNextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="8dp"

                android:gravity="center"
                android:text="@string/next_time"/>

        </LinearLayout>


    </android.support.v7.widget.CardView>


</RelativeLayout>