<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ImageShareActivity">

    <ImageView
        android:id="@+id/imageBackArrow"
        android:onClick="imageBackArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        android:src="@drawable/leftarrow"/>


    <ImageView
        android:id="@+id/imageDraw"
        android:layout_below="@+id/imageBackArrow"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/boy"
        android:tag="drawImage"/>


    <LinearLayout
        android:id="@+id/showingLayout"
        android:layout_below="@id/imageDraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <HorizontalScrollView
            android:id="@+id/horizontalScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:measureAllChildren="false"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/innerLay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:onClick="squareClick"
                    android:id="@+id/rlSquare"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/sqaure"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>
                <RelativeLayout
                    android:onClick="circleClick"
                    android:id="@+id/rlCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/emptycircle"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:onClick="polygonClick"
                    android:id="@+id/rlPolygon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/hexagon"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:onClick="triangleClick"
                    android:id="@+id/rlTriangle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/triangle"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlHeart"
                    android:onClick="heartClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/heartblack"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlPentagon"
                    android:onClick="pentagonClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/pentagon"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlDiamond"
                    android:onClick="diamondClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/sqaure"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlCircleCircle"
                    android:onClick="circleCirClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/emptycircle"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlStar"
                    android:onClick="starClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="10dp"
                        app:cardElevation="10dp">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:src="@drawable/starwhite"/>

                    </android.support.v7.widget.CardView>

                </RelativeLayout>


            </LinearLayout>

        </HorizontalScrollView>

        <Button
            android:id="@+id/btnShare"
            android:onClick="btnShareClick"
            android:layout_alignParentBottom="true"
            android:layout_width="150dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:textColor="@color/white_color"
            android:background="@drawable/roundbtn"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/hiddenLayout"
        android:layout_below="@id/imageDraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_background"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:checked="true"
            android:paddingLeft="5dp"
            android:shadowColor="@color/blue"/>

        <TextView
            android:id="@+id/tvTapText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_no_draw_to_copy_this_hashtag"
            android:minLines="2"
            android:lines="2"
            android:padding="5dp"
            android:textSize="15sp"
            android:gravity="center"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >


            <RelativeLayout
                android:onClick="rlDownloads"
                android:layout_margin="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_downloads">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/download"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:onClick="rlInstagram"
                android:layout_margin="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_insta">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/instagram"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:onClick="rlShare"
                android:layout_margin="10dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/circle_share">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sharewhite"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>



        </LinearLayout>

    </LinearLayout>


</RelativeLayout>